# My-Test-Program-Repos

./: .gitignore  i.sh  install.js  package-lock.json  package.json
crw-2/: ap.js  clear.js  ex.js  index.js  package-lock.json  package.json  test.js  test.json  websites.json
dect/: check_urls.txt  index copy.js  index.js  link_check_results.json  package-lock.json  package.json  test.js
forms/: index.js  test.js  test2.js
helper/: package-lock.json  package.json
message/: .gitignore  app.js
message copy/: app.js  package-lock.json  package.json
message copy/models/: message.js
message copy/public/: styles.css
message copy/views/: index.ejs  login-register.ejs
message-2/: app.js  package-lock.json  package.json
message-2/models/: user.js
message-2/public/: styles.css
message-backuo/: app.js
message-backuo/models/: message.js
message-backuo/views/: index.ejs
message/public/: styles.css
message/views/: index.ejs
msg-basic/: index.js  rooms.json
msg-basic/public/css/: style.css
msg-basic/public/js/: script.js
msg-basic/views/: index.ejs  room.ejs
msg2/: consumer.js  producer.js
msgweb/: .env  package-lock.json  package.json  server.js
msgweb/public/: index.html  styles.css
q2/: 2.py  index.py
queue/: Dockerfile  cnf.yaml  d2.js  d3.js  do.js  do_current.js  do_w.js  index.js  package-lock.json  package.json  pr.js  purge.js  send.js  start.sh  stats.js
queue/views/: stats.ejs
rust/web/: Cargo.toml
rust/web/src/: main.rs
web/: index.js  prx.txt
