[package]
name = "web_crawler"
version = "0.1.0"
edition = "2018"

[dependencies]
amiquip = "=0.4.2"
async-std = "1.12.0"
async-trait = "0.1.80"
chrono = "0.4.38"
lapin = "2.3.4"
mongodb = "2.8.2"
os_info = "3.8.2"
quick-xml = "0.31.0"
reqwest = "0.12.4"
scraper = "0.19.0"
select = "0.6.0"
serde = "1.0.201"
serde_derive = "1.0.201"
serde_json = "1.0.117"
surf = "2.3.2"
tokio = "1.37.0"
