[package]
name = "web_crawler"
version = "0.1.0"
edition = "2018"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = "1.2.1"
lapin = "1.9.0"
futures-util = "0.3"
scraper = "0.12.0"
quick-xml = "0.22.0"